# om-cli

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements.txt  run_cli.sh  run_cli_test.sh
custom/action_packs/: common_pack.py  file_and_directory_pack.py  json_pack.py  kafka_pack.py  shell_pack.py
custom/api_definitions/: test_api.json
custom/operation_menus/: om_tree.json
custom/test_resources/: mock_api_responses.json  mock_om_tree.json
custom/test_resources/registries/: registry-1.json  registry-2.json
documentation/: action_packs.md  api_definitions.md  om_tree.md
documentation/action_packs/: common.md  file_and_directory.md  json.md  kafka.md  shell.md
src/om_cli/: __init__.py  __main__.py  logger.py  logging.json
src/om_cli/handlers/: __init__.py  api_handler.py  arguments_handler.py  menu_handler.py
src/om_cli/helpers/: __init__.py  operation_tree_helpers.py  text_helpers.py
src/om_cli/models/: __init__.py  action_processing_state.py  loop_state.py  om_action.py  om_condition.py  om_condition_group.py  om_operation.py  om_parameter.py  om_parameter_list.py  om_tree.py  result_object.py
src/om_cli/services/: __init__.py  custom_components_processing.py  operation_processing.py  operation_tree_generator.py  parameter_processing.py
tests/: test_actions.py  test_arguments.py  test_operation_tree.py
tools/: first_line_path_commenter.py  requirements_upgrade.sh
